--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc && yarn copy-files && yarn package",
+    "copy-files": "cp README.md LICENSE build/",
+    "package": "jq 'del(.scripts, .devDependencies)' < package.json > build/package.json"
   }
 }
