--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "jest": "^28.1.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.24.6",
     "typescript": "^4.7.4"
   },
   "scripts": {
     "test": "jest",
     "build": "tsc && yarn copy-files && yarn package",
+    "build-example": "tsc -p ./tsconfig.example.json && yarn copy-files && yarn package",
+    "build-docs": "typedoc",
     "copy-files": "cp README.md LICENSE build/",
     "package": "jq 'del(.scripts, .devDependencies)' < package.json > build/package.json"
   }
