--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,13 +11,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "18.x"
+          node-version: '18.x'
       - run: yarn install --frozen-lockfile
       - run: yarn test
       - run: yarn build
-      - run: cd ./dist && yarn pack --filename=../package.tgz
+      - run: cd ./build && yarn pack --filename=../package.tgz
       - run: yarn semantic-release
         if: "!contains(github.event.head_commit.message, '[skip publish]')"
         env:
-          NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          NPM_TOKEN: '${{ secrets.NPM_TOKEN }}'
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
